# WrzDJ

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TEST_AUDIT.md  docker-compose.yml  render.yaml  renovate.json
server/: .dockerignore  Dockerfile  openapi-baseline.json  openapi.json  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_initial.py  002_add_kiosk_display_fields.py  003_add_archived_at.py  004_add_now_playing_visibility.py  004_add_play_history.py  005_add_tidal_sync.py  006_add_request_voting.py  007_add_user_role_and_settings.py  008_add_user_email.py  009_add_event_banner.py  010_add_auto_hide_minutes.py  011_add_requests_open.py  012_add_sync_columns.py  013_fix_timestamp_timezone.py  014_add_beatport_sync.py  015_add_beatport_pkce.py  016_add_beatport_playlist_id.py  017_add_beatport_subscription.py  018_encrypt_oauth_tokens.py  019_add_integration_toggles.py  020_add_request_track_metadata.py  021_add_mb_artist_cache.py  022_add_llm_settings.py  023_add_activity_log.py  024_add_kiosk_display_only.py  025_add_help_pages_seen.py  025_add_kiosks_table.py  026_add_kiosks_table.py  027_encrypt_beatport_oauth_state.py  028_remove_event_now_playing_fk.py  029_drop_legacy_tidal_columns.py  030_add_search_cache_source.py  031_add_lb_columns_expire_mb_cache.py  032_add_request_nickname.py  033_add_user_token_version.py  034_add_pre_event_collection.py  035_guest_profiles_event_cascade.py  036_add_guest_identity.py  037_email_verification.py  038_drop_request_vote_fp_unique.py  (+7 more)
server/app/: main.py
server/app/api/: __init__.py  admin.py  auth.py  beatport.py  bridge.py  collect.py  deps.py  events.py  guest.py  kiosk.py  public.py  requests.py  search.py  sse.py  tidal.py  verify.py  votes.py
server/app/core/: bridge_auth.py  config.py  encryption.py  lockout.py  logging_config.py  rate_limit.py  security_headers.py  time.py  validation.py
server/app/db/: session.py
server/app/models/: __init__.py  activity_log.py  email_verification_code.py  event.py  guest.py  guest_profile.py  kiosk.py  mb_artist_cache.py  now_playing.py  pending_email_change.py  play_history.py  request.py  request_vote.py  search_cache.py  system_settings.py  user.py
server/app/schemas/: __init__.py  activity_log.py  ai_settings.py  auth.py  beatport.py  bridge_commands.py  collect.py  common.py  (+14 more)
server/scripts/: export_openapi.py  seed_demo_event.py  start.sh
server/tests/: conftest.py  test_account.py  test_activity_log.py  test_adapter_registry.py  test_admin.py  test_admin_ai.py  test_admin_integrations.py  test_api.py  test_api_contracts.py  test_auth.py  test_auth_jwt_algorithm.py  test_auth_jwt_revocation.py  test_banner.py  test_batch_operations.py  test_beatport.py  test_beatport_adapter.py  test_beatport_api.py  test_beatport_manual_link.py  test_bridge_api.py  test_bridge_commands.py  test_camelot.py  test_collect_dj.py  test_collect_own_pick.py  test_collect_public.py  test_collect_service.py  test_config.py  test_cors.py  test_cross_device_scenario.py  test_dedup.py  test_email_verification.py  test_encryption.py  test_event_bus.py  test_event_phase.py  test_events.py  test_export.py  test_guest_confidence.py  test_guest_identity.py  test_guest_merge.py  test_guest_now_playing.py  test_guest_profile.py  (+62 more)
(+464 files in other folders)
