[project]
name = "wrzdj-server"
version = "0.1.0"
description = "WrzDJ API Server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "spotipy>=2.23.0",
    "slowapi>=0.1.9",
    "tidalapi>=0.7.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "freezegun>=1.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# F821: Allow forward references in SQLAlchemy models (string annotations)
# UP042: Keep (str, Enum) pattern for compatibility with existing code
# E711/E712: SQLAlchemy requires == None/True syntax for SQL column comparisons
ignore = ["UP042", "E711", "E712"]

[tool.ruff.lint.per-file-ignores]
# Allow forward references (F821) in SQLAlchemy models
"app/models/*.py" = ["F821"]
# Allow imports after helper function definitions in test files and services
"tests/*.py" = ["E402"]
"app/services/now_playing.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["app"]
omit = ["app/scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
